--- a/tools/python/CMakeLists.txt
+++ b/tools/python/CMakeLists.txt
@@ -28,7 +28,7 @@ set(python_srcs
    src/object_detection.cpp
    src/shape_predictor.cpp
    src/correlation_tracker.cpp
-   src/face_recognition.cpp
+   #src/face_recognition.cpp
    src/cnn_face_detector.cpp
 )
 
